# color_reduct

./: CMakeLists.txt  README.md  main.cpp
include/: edge_smooth.h  final_color_reduct.h  init_color_reduct.h  mean_shift.h  post_process.h  sub_sample.h
src/: edge_smooth.cpp  final_color_reduct.cpp  init_color_reduct.cpp  init_color_reduct.cpp.txt  mean_shift.cpp  mean_shift2.cpp.txt  post_process.cpp  sub_sample.cpp
